adding the model policy
